update ipfs gateway

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_AKACHI_NFT_CONTRACT = "0xe7C42Abb9ec35325104BF46899faC2a5425AE1b0"
 REACT_APP_AUCTION_NFT_CONTRACT = "0xaB5F4a41Da5cb064a96b14117ceb9029a605a066"
+REACT_APP_PROJECT_ID=""
+REACT_APP_PROJECT_SECRET=""
